welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: illegal start of simple expression
	var i = nums.length ; var y=0; var T = new Array[Int]=[3,i]
                                                              ^